--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "@cypress/webpack-preprocessor": "5.1.2",
     "babel-loader": "8.1.0",
     "babel-plugin-istanbul": "6.0.0",
+    "chalk": "4.0.0",
     "check-code-coverage": "1.1.0",
     "console-log-div": "0.6.3",
     "cypress": "4.4.0",
