--- a/package.json
+++ b/package.json
@@ -50,8 +50,9 @@
     "@cypress/browserify-preprocessor": "2.2.1",
     "debug": "4.1.1",
     "execa": "4.0.0",
-    "nyc": "15.0.1",
-    "istanbul-lib-coverage": "3.0.0"
+    "globby": "11.0.0",
+    "istanbul-lib-coverage": "3.0.0",
+    "nyc": "15.0.1"
   },
   "devDependencies": {
     "@babel/core": "7.9.0",
